# fiap_fase3_cap1

./: .pylintrc  README.md  github.txt  pyproject.toml  youtube.txt
assets/: registry.json
scripts/: 01-create-tables.sql
src/: main.py  menu.py  registro.py
src/esp32/: diagram.json  libraries.txt  link.txt  sketch.ino
src/repository/: oracle.py  registro_repository.py
