[tool.poetry]
name = "estoque"
version = "1.0.0"
description = ""
authors = ["Daniel Freire <danielfreire1@outlook.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.3.1"
oracledb = "^2.4.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"

